fixed spacing for smaller devices

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ nav {
 }
 
 nav .logo img {
-  width: 100px;
+  width: 80px;
+  padding: 10px 15px;
 }
 
 .links {
@@ -26,6 +27,10 @@ nav .logo img {
   display: none;
   gap: 2em;
   font-size: 1.2rem;
+}
+
+.right .top .left {
+  margin-left: 10px;
 }
 
 .left img {
